ddetect (0.103) UNRELEASED; urgency=low

  * Sven Luther
    - Added support for loading the i8042 and atkbd modules on
    powerpc/chrp and prep in order to have keyboard input :).

 -- Sven Luther <luther@debian.org>  Mon, 28 Jun 2004 14:25:16 +0200

ddetect (0.102) unstable; urgency=low

  * Joshua Kwan
    - Holy batman, Discover groks SBUS now! Disable the sunhme registration
      hack in hw-detect.sh.
    - And with that, add sbus to the list of busses probed by discover's
      invocation.
    - Fix Joey's template typo that caused modules to stop loading.
    - Correct some trivial Makefile style things.
  * Joey Hess
    - Add a "no ethernet card" option in ethdetect if autodetection finds
      nothing, to break out of the loop. Closes: #255247
    - If a module fails to load and there were no parameters, prompt for
      parameters at critical priority using a special template, and try the
      load again. Closes: #242827
    - Remove special case for ne, it should be handled by the above.
    - Prompt about whether to prompt for module parameters, to avoid 20
      useless questions on low priority installs (any better ideas?)
      Closes: #239890
  * Thiemo Seufer
    - Expand list of SGI ip32 CPUs.
  * Updated translations:
    - Bosnian (bs.po) by Safir Šećerović
    - fa (fa.po) by Arash Bijanzadeh
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Joshua Kwan <joshk@triplehelix.org>  Sun, 27 Jun 2004 17:36:05 -0700

ddetect (0.101) unstable; urgency=low

  * Joey Hess
    - Register the airport module if it's detected so it will be available in
      the installed system.
    - apt-install usbutils when installing hotplug to avoid the "can't
      synthesize root hub events" with 2.6 kernels.
    - Change the example kernel parameters to use lower case, as they usually.
      do. Unfuzzy all translations. Closes: #253683
  * Thiemo Seufer