@@ -7,7 +7,7 @@ build: build-stamp
 build-stamp:
 	dh_testdir
 	$(MAKE)
-	gzip -9c devnames.txt > devnames.gz
+	grep -v '^#' devnames.txt | gzip -9c > devnames.gz
 	touch build-stamp
 
 clean:
